# ticket-office

./: .gitignore  pyproject.toml
config/: asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  local.py  production.py  staging.py
ticket_office/common/: filters.py
ticket_office/event_catalog/: admin.py  apps.py  models.py  serializers.py  views.py
ticket_office/event_catalog/migrations/: 0001_initial.py  0002_auto_20210203_1913.py  0003_auto_20210204_1424.py  0004_auto_20210204_1427.py
ticket_office/ordering/: admin.py  models.py  serializers.py  views.py
ticket_office/ordering/migrations/: 0001_initial.py  0002_auto_20210202_1504.py  0003_auto_20210204_1424.py  0004_auto_20210204_1427.py  0005_auto_20210204_1446.py
ticket_office/shopping_basket/: admin.py  apps.py  models.py  serializers.py  views.py
ticket_office/shopping_basket/migrations/: 0001_initial.py  0002_auto_20210204_1424.py  0003_auto_20210204_1427.py  0004_auto_20210204_1446.py
